--- a/src/client/components/RadioButton/RadioButton.css
+++ b/src/client/components/RadioButton/RadioButton.css
@@ -12,7 +12,6 @@
   position: relative;
   display: block;
   transition: color .2s ease;
-  border-top: 1px solid grayLighter;
 }
 
 .label:hover {
